<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Weather</string>


    <!-- Screen titles -->
    <string name="title_settings">@string/nav_settings</string>
    <string name="title_about">@string/nav_about</string>
    <string name="title_city_select">Select the city</string>

    <!-- Navigation drawer related -->

    <string name="nav_settings">Settings</string>
    <string name="nav_add_city">Add city</string>
    <string name="nav_about">About</string>

    <!-- Weather -->
    <string name="wthr_temperature"><xliff:g id="value">%d</xliff:g>°</string>
    <string name="wthr_humidity">Humidity <xliff:g id="value">%d</xliff:g>%%</string>

    <!-- Settings -->

    <!-- Error's -->
    <string name="er_unknown">Unknown error happened.</string>
    <string name="er_no_connection">There is no internet connection.</string>
    <string name="er_request_failed">Server is not responding.</string>

    <string name="about_content">
        Weather app for first stage of Yandex.Mobilization 2017
        \n\nApp icon, weather icons - www.flaticon.com
    </string>

    <string name="city_name_hint">City</string>

    <string name="pr_auto_refresh">Auto refresh</string>
    <string name="pr_refresh_interval">Refresh interval</string>
    <string name="pr_cat_common_prefs">Common prefs</string>
    <string name="pr_units">Units format</string>

    <string-array name="units_types">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="update_intervals">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
    </string-array>

    <string name="default_city_name">Moscow</string>
    <string name="delete_city">Delete city from favorites?</string>
    <string name="cant_delete_last_city">You can\'t delete last city from favorites</string>

    <string name="weather_api_lang">EN</string>

</resources>