<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="weather_api_id_alias">appid</string>
    <string name="weather_api_count_alias">cnt</string>
    <string name="weather_api_lang_alias">lang</string>
    <string name="weather_api_key">2080026a4d30007e744e576b22d43c06</string>
    <string name="base_weather_url">http://api.openweathermap.org/data/2.5/</string>
    <string name="weather_api_default_count">20</string>

    <string-array name="update_intervals_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
    </string-array>

    <string-array name="units_types_values">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <integer name="default_city_id">524901</integer>
    <integer name="fade_quick_duration">150</integer>

    <string name="database_name">weather.db</string>
</resources>